update logo to align correctly and added href

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -88,7 +88,7 @@ section, footer {
     justify-content: space-between;
     align-items: center;
     height: 100%;
-    position: relative;
+    position: relative; // to burger button
 
     .hamburger {
         width: 25px;
@@ -104,9 +104,18 @@ section, footer {
     }
 }
 
+.brand {
+    height: 100%;
+    display: inline-block;
+    margin: 0;
+    padding: 0;
+}
+
 .logo {
+    display: inline-block;
     cursor: pointer;
     width: 180px;
+    height: 100%;
 }
 
 .nav-items {
